--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,7 +24,7 @@ jobs:
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: ./astra-website
+          path: ./
 
   deploy:
     environment:
